@@ -563,7 +563,6 @@ typedef struct rcoption {
 #define NANO_SCROLLDOWN_KEY		NANO_ALT_PLUS
 #define NANO_SCROLLUP_ALTKEY		NANO_ALT_UNDERSCORE
 #define NANO_SCROLLDOWN_ALTKEY		NANO_ALT_EQUALS
-#define NANO_CUTTILLEND_KEY		NANO_CONTROL_X
 #define NANO_CUTTILLEND_ALTKEY		NANO_ALT_T
 #define NANO_PARABEGIN_KEY		NANO_CONTROL_W
 #define NANO_PARABEGIN_ALTKEY		NANO_ALT_LPARENTHESIS
